# bhancockio-crewai-plus-crash-course

./: README.md  notes.md  pyproject.toml  report.md
src/email_automation/: crew.py  main.py
src/email_automation/config/: agents.yaml  tasks.yaml
src/email_automation/models/: email_content.py
src/email_automation/tools/: send_email_tool.py  test.py
